--- a/NavyPQS.csproj
+++ b/NavyPQS.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="FileIO.cs" />
     <Compile Include="JsonReadWrite.cs" />
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="QuestionGetSet.cs" />
     <Compile Include="Questions.cs">
       <SubType>Form</SubType>
@@ -68,6 +74,9 @@
     <Compile Include="TextReadWrite.cs" />
     <EmbeddedResource Include="AdminPanel.resx">
       <DependentUpon>AdminPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Questions.resx">
       <DependentUpon>Questions.cs</DependentUpon>
